# c-adventure

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/map/: FD_Animated_Water.tsx  FD_Grasslands.tsx  FD_Ground_Tiles.tsx  map.tmx
src/: main.c  main.h  player.c  player.h
